k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-server-deployment
  namespace: mern-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-server
  template:
    metadata:
      labels:
        app: mern-server
    spec:
      containers:
        - name: mern-server
          image: anamanasieva/mern-server:latest
          ports:
            - containerPort: 5000
