k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-server-service
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: mern-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
