k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-server-ingress
  namespace: mern-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mern.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-server-service
            port:
              number: 5000
