k8s/mern-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-client-deployment
  namespace: mern-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-client
  template:
    metadata:
      labels:
        app: mern-client
    spec:
      containers:
        - name: mern-client
          image: anamanasieva/mern-app-client:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mern-client-service
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: mern-client
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31576
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-client-ingress
  namespace: mern-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: frontend.mern.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-client-service
                port:
                  number: 80
